    ADDED: new splashscreen + button to disable it in the look&feel section
    ADDED: winning icons, SVGs and fixed code to use them
    ADDED: DUMMY splash screen (krusader/splash.jpg) which will be replaced
           later

  CHANGED: UserActions: addPlaceholderButton now only adds a space after
           an executable. Not after normal placeholders.

    FIXED: [ 1234213 ] synchronizer keeps owner,group if possible
    FIXED: [ 1365423 ] synchronizer does not copy symlinks
    FIXED: [ 1393227 ] KURLListRequester uses url completion instead of
                       shell completion (caused problems at spaces)
    FIXED: [ 1391892 ] problem with international characters in the 
                       destination of a symlink
    FIXED: [ 1393215 ] searcher, synchronizer: ~,$HOME,... is accepted now
    FIXED: [ 1413503 ] viewer: detach wasn't disabled when 1 tab remained
    FIXED: [ 1417969 ] Keybindings: reset to default keybinding fails
    FIXED: Konfigurator 'Defaults' button works only on the actual subpage
    FIXED: [ 1411561 ] renaming bug (thanks Heiner Eichmann)
    FIXED: [ 1381770 ] Status bar is not updated after TAB is pressed
                       (thanks Heiner Eichmann)
    FIXED: [ 1365053 ] krservices.h: invalid member function declaration
                       (thanks Heiner Eichmann)
    FIXED: [ 1400642 ] possible data loss (thanks Heiner Eichmann)
    FIXED: [ 1352107 ] File search "as you type" (thanks Heiner Eichmann)
    FIXED: [ 1401005 ] F10 doesn't close KrViewer
    FIXED: [ 1390116 ] CTRL+G duplicate action in viewer
    FIXED: [ 1362632 ] Ctrl-Alt-C does not work
    FIXED: [Debian: 343960] outdated libtool prevents from building
           (thanks to Aurelien Jarno <aurel32@debian.org>)
    FIXED: [ 1398540 ] wrong font in the new network connection dialog
    FIXED: [ 1398442 ] Column 'rwx' wrong data when column 'Type' is on
           (thanks Spiros Georgaras)
    FIXED: UserActions: addPlaceholderButton's popup-position