@@ -9,6 +9,7 @@
   CHANGED: UserActions: addPlaceholderButton now only adds a space after
            an executable. Not after normal placeholders.
 
+    FIXED: missing dpkg from Konfigurator-Dependencies
     FIXED: [ 1234213 ] synchronizer keeps owner,group if possible
     FIXED: [ 1365423 ] synchronizer does not copy symlinks
     FIXED: [ 1393227 ] KURLListRequester uses url completion instead of
